--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>e. wong</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/gallery/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/gallery/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/ewgallery/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/ewgallery/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -19,14 +19,16 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="/gallery/css/index.css">
-    <link rel="stylesheet" href="/gallery/css/business-casual.css">
+    <link rel="stylesheet" href="/ewgallery/css/index.css">
+    <link rel="stylesheet" href="/ewgallery/css/business-casual.css">
+    <link rel="stylesheet" href="/ewgallery/css/justifiedGallery.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
-<div class="brand">eric wong</div>
+<div class="brand"><a href="index.html" style="text-decoration:none;">E R I C W O N G</a></div>
 
 <!-- Navigation -->
 <nav class="navbar navbar-default" role="navigation">
@@ -40,13 +42,13 @@
                 <span class="icon-bar"></span>
             </button>
             <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-            <a class="navbar-brand" href="index.html">Business Casual</a>
+            <a class="navbar-brand" href="index.html">E R I C W O N G</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="index.html">LAND</a>
+                    <a href="land.html">LAND</a>
                 </li>
                 <li>
                     <a href="macro.html">MACRO</a>
@@ -62,9 +64,27 @@
 </nav>
 
 <div class="container">
-    <div class="row ">
-        <img src="/gallery/images/IMG_1746_v.png">
-        <img src="/gallery/images/IMG_3262.png">
+    <div id="gallery" class="row">
+        <div class="frontpage-crop">
+            <a href="/ewgallery/images/IMG1746_v.png">
+                <img class="frontpage" src="/ewgallery/images/IMG1746_v.png">
+            </a>
+        </div>
+        <div class="frontpage-crop">
+        <a href="/ewgallery/images/IMG3262.png">
+            <img class="frontpage"  src="/ewgallery/images/IMG3262.png">
+        </a>
+        </div>
+            <div class="frontpage-crop">
+        <a href="/ewgallery/images/IMG1746_v.png">
+            <img class="frontpage" src="/ewgallery/images/IMG1746_v.png">
+        </a>
+        </div>
+        <div class="frontpage-crop">
+        <a href="/ewgallery/images/IMG3262.png">
+            <img class="frontpage"  src="/ewgallery/images/IMG3262.png">
+        </a>
+        </div>
     </div>
 </div>
 <!-- /.container -->
@@ -80,6 +100,9 @@
 </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/gallery/js/bootstrap.min.js"></script>
+<script src="/ewgallery/js/bootstrap.min.js"></script>
+<script src="/ewgallery/js/jquery.justifiedGallery.min.js"></script>
+<script>
+</script>
 </body>
 </html>
