--- a/life.html
+++ b/life.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>e. wong</title>
+    <title>e. wong life</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="/ewgallery/css/bootstrap.min.css">
@@ -21,7 +21,6 @@
 
     <link rel="stylesheet" href="/ewgallery/css/index.css">
     <link rel="stylesheet" href="/ewgallery/css/business-casual.css">
-    <link rel="stylesheet" href="/ewgallery/css/justifiedGallery.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
@@ -50,10 +49,10 @@
                     <li>
                         <a href="land.html">LAND</a>
                     </li>
-                    <li class="active">
+                    <li>
                         <a href="macro.html">MACRO</a>
                     </li>
-                    <li>
+                    <li class="active">
                         <a href="life.html">LIFE</a>
                     </li>
                 </ul>
@@ -64,18 +63,12 @@
     </nav>
 
     <div class="container">
-        <div id="gallery">
+        <div class="row ">
             <a href="/ewgallery/images/IMG1746.png">
                 <img src="/ewgallery/images/IMG1746.png">
             </a>
             <a href="/ewgallery/images/IMG3403.png">
                 <img src="/ewgallery/images/IMG3403.png">
-            </a>
-            <a href="/ewgallery/images/IMG5645.png">
-                <img src="/ewgallery/images/IMG5645.png">
-            </a>
-            <a href="/ewgallery/images/IMG6385.png">
-                <img src="/ewgallery/images/IMG6385.png">
             </a>
         </div>
     </div>
@@ -93,14 +86,5 @@
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/ewgallery/js/bootstrap.min.js"></script>
-<script src="/ewgallery/js/jquery.justifiedGallery.min.js"></script>
-<script>
-    $("#gallery").justifiedGallery({
-        rowHeight: 250,
-        maxRowHeight: "100%",
-        margins: 20,
-        randomize: true
-    });
-</script>
 </body>
 </html>
