--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
     <link rel="stylesheet" href="/ewgallery/css/index.css">
     <link rel="stylesheet" href="/ewgallery/css/business-casual.css">
-    <link rel="stylesheet" href="/ewgallery/css/justifiedGallery.min.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
@@ -32,7 +31,7 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-default" role="navigation">
-    <div class="container">
+    <div class="">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -63,45 +62,38 @@
     <!-- /.container -->
 </nav>
 
-<div class="container">
-    <div id="gallery" class="row">
-        <div class="frontpage-crop">
-            <a href="/ewgallery/images/IMG1746_v.png">
-                <img class="frontpage" src="/ewgallery/images/IMG1746_v.png">
-            </a>
-        </div>
-        <div class="frontpage-crop">
-        <a href="/ewgallery/images/IMG3262.png">
-            <img class="frontpage"  src="/ewgallery/images/IMG3262.png">
+<div id="gallery">
+    <div class="frontpage-crop">
+        <a href="macro.html">
+            <img class="frontpage"  src="/ewgallery/images/IMG1746_v.png">
         </a>
-        </div>
-            <div class="frontpage-crop">
-        <a href="/ewgallery/images/IMG1746_v.png">
-            <img class="frontpage" src="/ewgallery/images/IMG1746_v.png">
+    </div>
+    <div class="frontpage-crop">
+        <a href="life.html">
+            <img class="frontpage" src="/ewgallery/images/IMG3907.png">
         </a>
-        </div>
-        <div class="frontpage-crop">
-        <a href="/ewgallery/images/IMG3262.png">
-            <img class="frontpage"  src="/ewgallery/images/IMG3262.png">
+    </div>
+    <div class="frontpage-crop">
+        <!--<a href=".html">-->
+            <img class="frontpage" src="/ewgallery/images/IMG0237.png">
+        <!--</a>-->
+    </div>
+    <div class="frontpage-crop">
+        <a href="land.html">
+            <img class="frontpage"  src="/ewgallery/images/IMG0994.png">
         </a>
-        </div>
     </div>
 </div>
 <!-- /.container -->
 
 <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <p class="address-bar">Copyright &copy; 2016</p>
-            </div>
-        </div>
+    <div class="col-lg-12 text-center" style="bottom: 0">
+        <p class="copyright">Copyright &copy; eric wong 2016</p>
     </div>
 </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/ewgallery/js/bootstrap.min.js"></script>
-<script src="/ewgallery/js/jquery.justifiedGallery.min.js"></script>
 <script>
 </script>
 </body>
