--- a/land.html
+++ b/land.html
@@ -31,7 +31,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
+        <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -63,24 +63,17 @@
     </nav>
 
     <div class="container">
-        <div class="row ">
-            <a href="/ewgallery/images/IMG1746.png">
-                <img src="/ewgallery/images/IMG1746.png">
-            </a>
-            <a href="/ewgallery/images/IMG3403.png">
-                <img src="/ewgallery/images/IMG3403.png">
-            </a>
+        <div class="gallery">
+            <p class="copyright">Coming Soon!</p>
         </div>
     </div>
     <!-- /.container -->
 
     <footer>
         <div class="container">
-            <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p class="address-bar">Copyright &copy; 2016</p>
+                    <p class="copyright">Copyright &copy; eric wong 2016</p>
                 </div>
-            </div>
         </div>
     </footer>
 </div>
