--- a/macro.html
+++ b/macro.html
@@ -32,7 +32,7 @@
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
+        <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -65,16 +65,16 @@
 
     <div class="container">
         <div id="gallery">
-            <a href="/ewgallery/images/IMG1746.png">
+            <a href="">
                 <img src="/ewgallery/images/IMG1746.png">
             </a>
-            <a href="/ewgallery/images/IMG3403.png">
+            <a href="">
                 <img src="/ewgallery/images/IMG3403.png">
             </a>
-            <a href="/ewgallery/images/IMG5645.png">
+            <a href="">
                 <img src="/ewgallery/images/IMG5645.png">
             </a>
-            <a href="/ewgallery/images/IMG6385.png">
+            <a href="">
                 <img src="/ewgallery/images/IMG6385.png">
             </a>
         </div>
@@ -83,11 +83,9 @@
 
     <footer>
         <div class="container">
-            <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p class="address-bar">Copyright &copy; 2016</p>
+                    <p class="copyright">Copyright &copy; eric wong 2016</p>
                 </div>
-            </div>
         </div>
     </footer>
 </div>
