--- a/index.html
+++ b/index.html
@@ -62,25 +62,25 @@
     <!-- /.container -->
 </nav>
 
-<div id="gallery">
+<div id="gallery" class="container" style="padding: 0">
     <div class="frontpage-crop">
         <a href="macro.html">
-            <img class="frontpage"  src="/ewgallery/images/IMG1746_v.png">
+            <img class="frontpage"  src="images/IMG1746_v.png">
         </a>
     </div>
     <div class="frontpage-crop">
         <a href="life.html">
-            <img class="frontpage" src="/ewgallery/images/IMG3907.png">
+            <img class="frontpage" src="images/IMG3907.png">
         </a>
     </div>
     <div class="frontpage-crop">
         <!--<a href=".html">-->
-            <img class="frontpage" src="/ewgallery/images/IMG0237.png">
+            <img class="frontpage" src="images/IMG0237.png">
         <!--</a>-->
     </div>
     <div class="frontpage-crop">
         <a href="land.html">
-            <img class="frontpage"  src="/ewgallery/images/IMG0994.png">
+            <img class="frontpage"  src="images/IMG0994.png">
         </a>
     </div>
 </div>
@@ -95,6 +95,16 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/ewgallery/js/bootstrap.min.js"></script>
 <script>
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73641920-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
