--- a/macro.html
+++ b/macro.html
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="/">E R I C W O N G</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,27 +66,25 @@
     <div class="container">
         <div id="gallery">
             <a href="">
-                <img src="/ewgallery/images/IMG1746.png">
+                <img src="images/IMG1746.png">
             </a>
             <a href="">
-                <img src="/ewgallery/images/IMG3403.png">
+                <img src="images/IMG3403.png">
             </a>
             <a href="">
-                <img src="/ewgallery/images/IMG5645.png">
+                <img src="images/IMG5645.png">
             </a>
             <a href="">
-                <img src="/ewgallery/images/IMG6385.png">
+                <img src="images/IMG6385.png">
             </a>
         </div>
     </div>
     <!-- /.container -->
 
     <footer>
-        <div class="container">
-                <div class="col-lg-12 text-center">
-                    <p class="copyright">Copyright &copy; eric wong 2016</p>
-                </div>
-        </div>
+            <div class="col-lg-12 text-center">
+                <p class="copyright">Copyright &copy; eric wong 2016</p>
+            </div>
     </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -99,6 +97,16 @@
         margins: 20,
         randomize: true
     });
+</script>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-73641920-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 </body>
 </html>
