--- a/macro.html
+++ b/macro.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="brand"><a href="index.html" style="text-decoration:none;">E R I C W O N G</a></div>
+    <div class="brand"><a href="." style="text-decoration:none;">E R I C W O N G</a></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="/">E R I C W O N G</a>
+                <a class="navbar-brand" href=".">E R I C W O N G</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
