--- a/macro.html
+++ b/macro.html
@@ -65,7 +65,7 @@
 
     <div class="container">
         <div id="gallery">
-            <a href="">
+            <a href="images/IMG1746.png" rel="address:/images/IMG1746.png">
                 <img src="images/IMG1746.png">
             </a>
             <a href="">
@@ -77,10 +77,13 @@
             <a href="">
                 <img src="images/IMG6385.png">
             </a>
+
         </div>
     </div>
     <!-- /.container -->
-
+    <!--<a href="test1.html" rel="address:/test1">Test 1</a>-->
+    <!--<a href="test2.html" rel="address:/test2">Test 2</a>-->
+    <!--<div id="area"></div>-->
     <footer>
             <div class="col-lg-12 text-center">
                 <p class="copyright">Copyright &copy; eric wong 2016</p>
@@ -88,15 +91,39 @@
     </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/ewgallery/js/bootstrap.min.js"></script>
-<script src="/ewgallery/js/jquery.justifiedGallery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/jquery.justifiedGallery.min.js"></script>
+<script src="js/jquery.address-1.5.js?strict=0"></script>
 <script>
-    $("#gallery").justifiedGallery({
-        rowHeight: 250,
-        maxRowHeight: "100%",
-        margins: 20,
-        randomize: true
-    });
+    $(document).ready(function (){
+        $("#gallery").justifiedGallery({
+            rowHeight: 250,
+            maxRowHeight: "100%",
+            margins: 20,
+            randomize: false
+        });
+        console.log(location.hash);
+        $("#area").load(location.hash.slice(2) + ".html");
+
+            function loadURL(url) {
+                console.log("loadURL: " + url);
+                $("#area").load(url);
+            }
+
+
+            // Event handlers
+            $.address.init(function(event) {
+                console.log("init: " + $('[rel*="address:' + event.value + '"]').attr('href'));
+            }).change(function(event) {
+                $(document).on("load", "#area", $('[rel*="address:' + event.value + '"]').attr('href'));
+                console.log("change");
+            });
+
+            $('a').click(function(){
+                loadURL($(this).attr('href'));
+            });
+
+    })
 </script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -106,6 +133,9 @@
 
   ga('create', 'UA-73641920-1', 'auto');
   ga('send', 'pageview');
+
+</script>
+<script>
 
 </script>
 </body>
