Changed to rel paths

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li>
-                    <a href="land.html">LAND</a>
+                    <a href="land">LAND</a>
                 </li>
                 <li>
-                    <a href="macro.html">MACRO</a>
+                    <a href="macro">MACRO</a>
                 </li>
                 <li>
-                    <a href="life.html">LIFE</a>
+                    <a href="life">LIFE</a>
                 </li>
             </ul>
         </div>
@@ -64,12 +64,12 @@
 
 <div id="gallery" class="container" style="padding: 0">
     <div class="frontpage-crop">
-        <a href="macro.html">
+        <a href="macro">
             <img class="frontpage"  src="images/IMG1746_v.png">
         </a>
     </div>
     <div class="frontpage-crop">
-        <a href="life.html">
+        <a href="life">
             <img class="frontpage" src="images/IMG3907.png">
         </a>
     </div>
@@ -79,7 +79,7 @@
         <!--</a>-->
     </div>
     <div class="frontpage-crop">
-        <a href="land.html">
+        <a href="land">
             <img class="frontpage"  src="images/IMG0994.png">
         </a>
     </div>
