--- a/life/index.html
+++ b/life/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>e. wong</title>
+    <title>e. wong life</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/ewgallery/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/ewgallery/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -19,15 +19,15 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="/ewgallery/css/index.css">
-    <link rel="stylesheet" href="/ewgallery/css/business-casual.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="../css/business-casual.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
-    <div class="brand"><a href="." style="text-decoration:none;">E R I C W O N G</a></div>
+    <div class="brand"><a href=".." style="text-decoration:none;">E R I C W O N G</a></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -41,19 +41,19 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href=".">E R I C W O N G</a>
+                <a class="navbar-brand" href="..">E R I C W O N G</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
+                    <li>
+                        <a href="../land">LAND</a>
+                    </li>
+                    <li>
+                        <a href="../macro">MACRO</a>
+                    </li>
                     <li class="active">
-                        <a href="land.html">LAND</a>
-                    </li>
-                    <li>
-                        <a href="macro.html">MACRO</a>
-                    </li>
-                    <li>
-                        <a href="life.html">LIFE</a>
+                        <a href=".">LIFE</a>
                     </li>
                 </ul>
             </div>
@@ -71,14 +71,14 @@
 
     <footer>
         <div class="container">
-                <div class="col-lg-12 text-center">
-                    <p class="copyright">Copyright &copy; eric wong 2016</p>
-                </div>
+            <div class="col-lg-12 text-center">
+                <p class="copyright">Copyright &copy; eric wong 2016</p>
+            </div>
         </div>
     </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/ewgallery/js/bootstrap.min.js"></script>
+<script src="../js/bootstrap.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
