--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <title>e. wong</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/ewgallery/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/ewgallery/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -19,8 +19,8 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <link rel="stylesheet" href="/ewgallery/css/index.css">
-    <link rel="stylesheet" href="/ewgallery/css/business-casual.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/business-casual.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
@@ -31,7 +31,6 @@
 
 <!-- Navigation -->
 <nav class="navbar navbar-default" role="navigation">
-    <div class="">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -58,42 +57,61 @@
             </ul>
         </div>
         <!-- /.navbar-collapse -->
-    </div>
     <!-- /.container -->
 </nav>
 
-<div id="gallery" class="container" style="padding: 0">
+<div id="gallery" class="row" style="padding: 15px">
     <div class="frontpage-crop">
-        <a href="macro">
+        <div class="hovereffect">
             <img class="frontpage"  src="images/IMG1746_v.png">
-        </a>
+            <a href="macro">
+                <div class="overlay">
+                    <h2>Macro</h2>
+                </div>
+            </a>
+        </div>
     </div>
     <div class="frontpage-crop">
-        <a href="life">
+        <div class="hovereffect">
             <img class="frontpage" src="images/IMG3907.png">
-        </a>
+            <a href="life">
+            <div class="overlay">
+                <h2>Life</h2>
+            </div>
+            </a>
+        </div>
     </div>
     <div class="frontpage-crop">
-        <!--<a href=".html">-->
+        <div class="hovereffect">
             <img class="frontpage" src="images/IMG0237.png">
-        <!--</a>-->
+            <!--<a href=".">-->
+                <div class="overlay">
+                    <h2></h2>
+                </div>
+            <!--</a>-->
+            </div>
     </div>
     <div class="frontpage-crop">
-        <a href="land">
+        <div class="hovereffect">
             <img class="frontpage"  src="images/IMG0994.png">
-        </a>
+            <a href="land">
+                <div class="overlay">
+                    <h2>Land</h2>
+                </div>
+            </a>
+        </div>
     </div>
 </div>
-<!-- /.container -->
 
 <footer>
     <div class="col-lg-12 text-center" style="bottom: 0">
         <p class="copyright">Copyright &copy; eric wong 2016</p>
     </div>
 </footer>
+<!-- /.container -->
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="/ewgallery/js/bootstrap.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script>
 </script>
 <script>
