--- a/macro/index.html
+++ b/macro/index.html
@@ -66,19 +66,19 @@
 
     <div class="container">
         <div id="gallery">
-            <a href="img/IMG1746.png" rel="address:/img/IMG1746.png">
+            <a href="img/IMG1746.png" rel="address:/img/IMG1746">
                 <img src="img/IMG1746.png">
             </a>
-            <a href="img/IMG3403.png">
+            <a href="img/IMG3403.png"  rel="address:/img/IMG3403.png">
                 <img src="img/IMG3403.png">
             </a>
-            <a href="img/IMG5645.png">
+            <a href="img/IMG5645.png"  rel="address:/img/IMG5645.png">
                 <img src="img/IMG5645.png">
             </a>
             <a href="img/IMG6385.png">
                 <img src="img/IMG6385.png">
             </a>
-            <a href="img/IMG1746.png" rel="address:/img/IMG1746.png">
+            <a href="img/IMG1746.png" rel="address:/img/IMG1746">
                 <img src="img/IMG1746.png">
             </a>
             <a href="img/IMG3403.png">
@@ -94,9 +94,9 @@
         </div>
     </div>
     <!-- /.container -->
-    <!--<a href="test1.html" rel="address:/test1">Test 1</a>-->
-    <!--<a href="test2.html" rel="address:/test2">Test 2</a>-->
-    <!--<div id="area"></div>-->
+    <a href="test1.html" rel="address:/test1">Test 1</a>
+    <a href="test2.html" rel="address:/test2">Test 2</a>
+    <div id="area"></div>
     <footer>
             <div class="col-lg-12 text-center">
                 <p class="copyright">Copyright &copy; eric wong 2016</p>
@@ -115,7 +115,7 @@
             maxRowHeight: "100%",
             margins: 10,
             randomize: false,
-            rel: 'gallery'
+            rel: 'gallery1'
         }).on('jg.complete', function () {
             $(this).find('a').colorbox({
                 maxWidth : '100%',
@@ -124,14 +124,16 @@
                 transition : 'elastic',
                 current : ''
             });
-        });;
+        });
 
-        console.log(location.hash);
-        $("#area").load(location.hash.slice(2) + ".html");
+//        $.colorbox({width:"100%", height:"100%", inline:true, href:"#gallery"});
+
+//        console.log(location.hash);
+//        $("#area").load(location.hash.slice(2) + ".html");
 
             function loadURL(url) {
                 console.log("loadURL: " + url);
-                $("#area").load(url);
+//                $("#area").load(url);
             }
 
 
@@ -143,7 +145,7 @@
                 console.log("change");
             });
 
-            $('a').click(function(){
+            $('#gallery a').click(function(){
                 loadURL($(this).attr('href'));
             });
 
