Fixed invalid redirect for contact page. Removed link from contact img

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         <div class="hovereffect">
             <div id="instafeed" style="max-height: 500px"></div>
             <!--<img class="frontpage" src="images/IMG0237.png">-->
-            <a href="Contact">
+            <a href="contact">
                 <div class="overlay">
                     <h2>Contact</h2>
                 </div>
@@ -127,7 +127,7 @@
         clientId: '86a64b6f747741efa9044421d55fafd1',
         accessToken: '2948802822.86a64b6.59c362a80d4f437883321bfb6e5a4658',
         resolution: 'standard_resolution',
-        template: '<a href="{{link}}"><img src="{{image}}" style="max-height: 500px;"/></a>'
+        template: '<img src="{{image}}" style="max-height: 500px;"/></a>'
     });
     feed.run();
 </script>
