--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <!-- /.container -->
 </nav>
 
-<div id="gallery" class="row" style="padding: 15px">
-    <div class="frontpage-crop">
+<div id="gallery" class="row" style="margin: 0 -3px;">
+    <div class="frontpage-crop col-xs-3">
         <div class="hovereffect">
             <img class="frontpage"  src="images/IMG0994.png">
             <a href="land">
@@ -75,7 +75,7 @@
             </a>
         </div>
     </div>
-    <div class="frontpage-crop">
+    <div class="frontpage-crop col-xs-3">
         <div class="hovereffect">
             <img class="frontpage"  src="images/IMG1746_v.png">
             <a href="macro">
@@ -85,7 +85,7 @@
             </a>
         </div>
     </div>
-    <div class="frontpage-crop">
+    <div class="frontpage-crop col-xs-3">
         <div class="hovereffect">
             <img class="frontpage" src="images/IMG3907.png">
             <a href="life">
@@ -95,7 +95,7 @@
             </a>
         </div>
     </div>
-    <div class="frontpage-crop">
+    <div class="frontpage-crop col-xs-3">
         <div class="hovereffect">
             <div id="instafeed" style="max-height: 500px"></div>
             <!--<img class="frontpage" src="images/IMG0237.png">-->
@@ -127,7 +127,7 @@
         clientId: '86a64b6f747741efa9044421d55fafd1',
         accessToken: '2948802822.86a64b6.59c362a80d4f437883321bfb6e5a4658',
         resolution: 'standard_resolution',
-        template: '<img src="{{image}}" style="max-height: 500px;"/></a>'
+        template: '<img src="{{image}}" class="frontpage" style="max-height: 500px;"/></a>'
     });
     feed.run();
 </script>
