Styling: Match whitespace of previous layout (before ig feed)

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!-- /.container -->
 </nav>
 
-<div id="gallery" class="row" style="margin: 0 -3px;">
+<div id="gallery" class="row" style="margin:40px -1px 20px;">
     <div class="frontpage-crop col-xs-3">
         <div class="hovereffect">
             <img class="frontpage"  src="images/IMG0994.png">
