Update: New images

--- a/life/index.html
+++ b/life/index.html
@@ -68,7 +68,9 @@
 
     <div class="container">
         <div class="gallery">
-            <p class="copyright">Coming Soon!</p>
+            <a href="img/IMG3092.png" rel="lightbox[gallery]">
+                <img src="img/IMG3092.png">
+            </a>
         </div>
     </div>
     <!-- /.container -->
