--- a/macro/index.html
+++ b/macro/index.html
@@ -77,11 +77,17 @@
             <a href="img/IMG3403.png"  rel="lightbox[gallery]">
                 <img src="img/IMG3403.png">
             </a>
+            <a href="img/IMG2023.png" rel="lightbox[gallery]">
+                <img src="img/IMG2023.png">
+            </a>
             <a href="img/IMG5645.png"  rel="lightbox[gallery]">
                 <img src="img/IMG5645.png">
             </a>
             <a href="img/IMG6385.png" rel="lightbox[gallery]">
                 <img src="img/IMG6385.png">
+            </a>
+            <a href="img/IMG2696.png" rel="lightbox[gallery]">
+                <img src="img/IMG2696.png">
             </a>
         </div>
     </div>
@@ -99,8 +105,8 @@
 <script>
     $(document).ready(function (){
         $("#gallery").justifiedGallery({
-            rowHeight: 250,
-            maxRowHeight: "100%",
+            rowHeight: 225,
+//            maxRowHeight: "100%",
             margins: 10,
             randomize: false
         });
