--- a/land/index.html
+++ b/land/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>e. wong</title>
+    <title>e. wong LAND</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -21,6 +21,9 @@
 
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/business-casual.css">
+    <link rel="stylesheet" href="../plugins/jquery.justifiedgallery/justifiedGallery.min.css">
+    <link rel="stylesheet" href="../plugins/colorbox/colorbox.css">
+    <link rel="stylesheet" href="../plugins/prettyPhoto/prettyphoto.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
@@ -67,30 +70,61 @@
     </nav>
 
     <div class="container">
-        <div class="gallery">
-            <p class="copyright">Coming Soon!</p>
+        <div id="gallery">
+            <a href="img/IMG3107.png" rel="lightbox[gallery]">
+                <img src="img/IMG3107.png">
+            </a>
+            <a href="img/IMG3031.png" rel="lightbox[gallery]">
+                <img src="img/IMG3031.png">
+            </a>
+            <a href="img/IMG2692.png" rel="lightbox[gallery]">
+                <img src="img/IMG2692.png">
+            </a>
+            <a href="img/IMG2016.png"  rel="lightbox[gallery]">
+                <img src="img/IMG2016.png">
+            </a>
+            <a href="img/IMG4362.png"  rel="lightbox[gallery]">
+                <img src="img/IMG4362.png">
+            </a>
+            <a href="img/IMG2027.png" rel="lightbox[gallery]">
+                <img src="img/IMG2027.png">
+            </a>
+            <a href="img/IMG0622.png" rel="lightbox[gallery]">
+                <img src="img/IMG0622.png">
+            </a>
         </div>
     </div>
     <!-- /.container -->
-
     <footer>
-        <div class="container">
-                <div class="col-lg-12 text-center">
-                    <p class="copyright">Copyright &copy; eric wong 2016</p>
-                </div>
+        <div class="col-lg-12 text-center">
+            <p class="copyright">Copyright &copy; eric wong 2016</p>
         </div>
     </footer>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="../plugins/jquery.justifiedgallery/jquery.justifiedGallery.min.js"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    $(document).ready(function (){
+        $("#gallery").justifiedGallery({
+            rowHeight: 225,
+            maxRowHeight: "100%",
+            margins: 10,
+            randomize: false
+        });
+    });
+</script>
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-73641920-1', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-73641920-1', 'auto');
+    ga('send', 'pageview');
+
+</script>
+<script>
 
 </script>
 </body>
