Layout: gallery alignment fix

--- a/land/index.html
+++ b/land/index.html
@@ -68,39 +68,39 @@
         </div>
         <!-- /.container -->
     </nav>
-
-    <div class="container">
-        <div id="gallery">
-            <a href="img/IMG3107.png" rel="lightbox[gallery]">
-                <img src="img/IMG3107.png">
-            </a>
-            <a href="img/IMG3031.png" rel="lightbox[gallery]">
-                <img src="img/IMG3031.png">
-            </a>
-            <a href="img/IMG2692.png" rel="lightbox[gallery]">
-                <img src="img/IMG2692.png">
-            </a>
-            <a href="img/IMG2016.png"  rel="lightbox[gallery]">
-                <img src="img/IMG2016.png">
-            </a>
-            <a href="img/IMG4362.png"  rel="lightbox[gallery]">
-                <img src="img/IMG4362.png">
-            </a>
-            <a href="img/IMG2027.png" rel="lightbox[gallery]">
-                <img src="img/IMG2027.png">
-            </a>
-            <a href="img/IMG0622.png" rel="lightbox[gallery]">
-                <img src="img/IMG0622.png">
-            </a>
-        </div>
+    <!-- gallery -->
+    <div id="gallery">
+        <a href="img/IMG3107.png" rel="lightbox[gallery]">
+            <img src="img/IMG3107.png">
+        </a>
+        <a href="img/IMG3031.png" rel="lightbox[gallery]">
+            <img src="img/IMG3031.png">
+        </a>
+        <a href="img/IMG2692.png" rel="lightbox[gallery]">
+            <img src="img/IMG2692.png">
+        </a>
+        <a href="img/IMG2016.png"  rel="lightbox[gallery]">
+            <img src="img/IMG2016.png">
+        </a>
+        <a href="img/IMG4362.png"  rel="lightbox[gallery]">
+            <img src="img/IMG4362.png">
+        </a>
+        <a href="img/IMG2027.png" rel="lightbox[gallery]">
+            <img src="img/IMG2027.png">
+        </a>
+        <a href="img/IMG0622.png" rel="lightbox[gallery]">
+            <img src="img/IMG0622.png">
+        </a>
     </div>
-    <!-- /.container -->
+    <!-- /.gallery -->
     <footer>
         <div class="col-lg-12 text-center">
             <p class="copyright">Copyright &copy; eric wong 2016</p>
         </div>
     </footer>
 </div>
+<!-- /.container -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../plugins/jquery.justifiedgallery/jquery.justifiedGallery.min.js"></script>
