--- a/life/index.html
+++ b/life/index.html
@@ -66,14 +66,13 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
-        <div class="gallery">
-            <a href="img/IMG3092.png" rel="lightbox[gallery]">
-                <img src="img/IMG3092.png">
-            </a>
-        </div>
+    <!-- gallery -->
+    <div class="gallery">
+        <a href="img/IMG3092.png" rel="lightbox[gallery]">
+            <img src="img/IMG3092.png">
+        </a>
     </div>
-    <!-- /.container -->
+    <!-- /.gallery -->
 
     <footer>
         <div class="container">
@@ -83,6 +82,8 @@
         </div>
     </footer>
 </div>
+<!-- /.container -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script>
