--- a/macro/index.html
+++ b/macro/index.html
@@ -69,35 +69,36 @@
         <!-- /.container -->
     </nav>
 
-    <div class="container">
-        <div id="gallery">
-            <a href="img/IMG1746.png" rel="lightbox[gallery]">
-                <img src="img/IMG1746.png">
-            </a>
-            <a href="img/IMG3403.png"  rel="lightbox[gallery]">
-                <img src="img/IMG3403.png">
-            </a>
-            <a href="img/IMG2023.png" rel="lightbox[gallery]">
-                <img src="img/IMG2023.png">
-            </a>
-            <a href="img/IMG5645.png"  rel="lightbox[gallery]">
-                <img src="img/IMG5645.png">
-            </a>
-            <a href="img/IMG6385.png" rel="lightbox[gallery]">
-                <img src="img/IMG6385.png">
-            </a>
-            <a href="img/IMG2696.png" rel="lightbox[gallery]">
-                <img src="img/IMG2696.png">
-            </a>
-        </div>
+    <!-- Gallery -->
+    <div id="gallery">
+        <a href="img/IMG1746.png" rel="lightbox[gallery]">
+            <img src="img/IMG1746.png">
+        </a>
+        <a href="img/IMG3403.png"  rel="lightbox[gallery]">
+            <img src="img/IMG3403.png">
+        </a>
+        <a href="img/IMG2023.png" rel="lightbox[gallery]">
+            <img src="img/IMG2023.png">
+        </a>
+        <a href="img/IMG5645.png"  rel="lightbox[gallery]">
+            <img src="img/IMG5645.png">
+        </a>
+        <a href="img/IMG6385.png" rel="lightbox[gallery]">
+            <img src="img/IMG6385.png">
+        </a>
+        <a href="img/IMG2696.png" rel="lightbox[gallery]">
+            <img src="img/IMG2696.png">
+        </a>
     </div>
-    <!-- /.container -->
+    <!-- /.gallery -->
     <footer>
             <div class="col-lg-12 text-center">
                 <p class="copyright">Copyright &copy; eric wong 2016</p>
             </div>
     </footer>
 </div>
+<!-- /.container -->
+
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../plugins/jquery.justifiedgallery/jquery.justifiedGallery.min.js"></script>
