--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="life">LIFE</a>
             </li>
             <li>
-                <a href="contact">CONTACT</a>
+                <a href="contact">IG</a>
             </li>
         </ul>
     </div>
