--- a/land/index.html
+++ b/land/index.html
@@ -23,7 +23,8 @@
     <link rel="stylesheet" href="../css/angular.css">
     <link rel="stylesheet" href="../css/business-casual.css">
     <link rel="stylesheet" href="../vendor/jquery.justifiedGallery/justifiedGallery.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+          rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
@@ -36,7 +37,8 @@
         <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -59,7 +61,7 @@
                         <a href="../life">LIFE</a>
                     </li>
                     <li>
-                        <a href="../contact">CONTACT</a>
+                        <a href="../contact">IG</a>
                     </li>
                 </ul>
             </div>
@@ -69,20 +71,31 @@
     </nav>
     <!-- gallery -->
     <div id="gallery">
-        <a href="img/IMG3107.png" rel="lightbox[gallery]">
+        <div class="hovereffect">
             <img src="img/IMG3107.png">
-        </a>
+
+            <div class="overlay">
+                <h2>Hong Kong</h2>
+                <a href="img/IMG3107.png"></a>
+            </div>
+        </div>
         <a href="img/IMG3031.png" rel="lightbox[gallery]">
             <img src="img/IMG3031.png">
         </a>
         <a href="img/IMG2692.png" rel="lightbox[gallery]">
             <img src="img/IMG2692.png">
         </a>
-        <a href="img/IMG2016.png"  rel="lightbox[gallery]">
+        <a href="img/IMG2016.png" rel="lightbox[gallery]">
             <img src="img/IMG2016.png">
         </a>
-        <a href="img/IMG4362.png"  rel="lightbox[gallery]">
+        <a href="img/IMG1009.png" rel="lightbox[gallery]">
+            <img src="img/IMG1009.png">
+        </a>
+        <a href="img/IMG4362.png" rel="lightbox[gallery]">
             <img src="img/IMG4362.png">
+        </a>
+        <a href="img/IMG6148.png" rel="lightbox[gallery]">
+            <img src="img/IMG6148.png">
         </a>
         <a href="img/IMG2027.png" rel="lightbox[gallery]">
             <img src="img/IMG2027.png">
@@ -90,17 +103,8 @@
         <a href="img/IMG0622.png" rel="lightbox[gallery]">
             <img src="img/IMG0622.png">
         </a>
-        <a href="img/IMG0622.png" rel="lightbox[gallery]">
-            <img src="img/IMG0622.png">
-        </a>
-        <a href="img/IMG4362.png"  rel="lightbox[gallery]">
-            <img src="img/IMG4362.png">
-        </a>
-        <a href="img/IMG2027.png" rel="lightbox[gallery]">
-            <img src="img/IMG2027.png">
-        </a>
-        <a href="img/IMG0622.png" rel="lightbox[gallery]">
-            <img src="img/IMG0622.png">
+        <a href="img/IMG3262.png" rel="lightbox[gallery]">
+            <img src="img/IMG3262.png">
         </a>
     </div>
     <!-- /.gallery -->
@@ -109,21 +113,45 @@
             <p class="copyright">Copyright &copy; eric wong 2016</p>
         </div>
     </footer>
+    <!-- Small modal -->
+
+
+    <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                    <h4 class="modal-title" id="mySmallModalLabel">Small modal</h4>
+                </div>
+                <div class="modal-body">
+                    ....
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- /.container -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+<script src="../js/jquery-1.11.3.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
 <script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script>
     $(document).ready(function (){
         $("#gallery").justifiedGallery({
-            rowHeight: 225,
-            maxRowHeight: "100%",
+            rowHeight: 125,
             margins: 10,
             randomize: false
         });
+        console.log(window.location);
+        if(window.location.pathname.indexOf('#IMG313') != -1) {
+            $("button[data-id='macro']").modal('show');
+        };
+
     });
+
 </script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -133,6 +161,7 @@
 
     ga('create', 'UA-73641920-1', 'auto');
     ga('send', 'pageview');
+
 
 </script>
 <script>
