--- a/life/index.html
+++ b/life/index.html
@@ -23,9 +23,12 @@
     <link rel="stylesheet" href="../css/angular.css">
     <link rel="stylesheet" href="../css/business-casual.css">
     <link rel="stylesheet" href="../vendor/jquery.justifiedGallery/justifiedGallery.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="http://vjs.zencdn.net/5.10.4/video-js.css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
+          rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Work+Sans:200,400' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <div class="container">
@@ -36,7 +39,8 @@
         <div class="">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -56,10 +60,10 @@
                         <a href="../macro">MACRO</a>
                     </li>
                     <li class="active">
-                        <a href=".">LIFE</a>
+                        <a href=".">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">CONTACT</a>
+                        <a href="../contact">IG</a>
                     </li>
                 </ul>
             </div>
@@ -68,11 +72,57 @@
         <!-- /.container -->
     </nav>
 
-    <!-- gallery -->
-    <div class="gallery">
-        <a href="img/IMG3092.png" rel="lightbox[gallery]">
-            <img src="img/IMG3092.png">
-        </a>
+    <!--&lt;!&ndash; gallery &ndash;&gt;-->
+    <!--<div class="gallery">-->
+    <!--<a href="img/IMG3092.png" rel="lightbox[gallery]">-->
+    <!--<img src="img/IMG3092.png">-->
+    <!--</a>-->
+    <!--</div>-->
+
+    <div class="gallery" style="width: 960px; margin: 0 auto">
+        <div class="row">
+
+            <div class="col-sm-6 hovereffect hovereffect-video">
+                <video id="vid_01" class="video-js" controls preload="auto" width="495" height="278"
+                       poster="" data-setup="{}">
+                    <source src="../video/QuarryRock.mp4" type='video/m4v'>
+                    <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a web browser that
+                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                    </p>
+                </video>
+                <div class="overlay">
+                    <p class="description"> Exploring Quarry Rock.</p>
+                </div>
+            </div>
+
+            <div class="col-sm-6 hovereffect hovereffect-video">
+                <video id="vid_02" class="video-js" controls preload="auto" width="495" height="278"
+                       poster="" data-setup="{}">
+                    <source src="../video/Cork&Fin2.m4v" type='video/m4v'>
+                    <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a web browser that
+                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                    </p>
+                </video>
+                <div class="overlay">
+                    <p class="description"> Dine out Vancouver at the Cork and Fin.</p>
+                </div>
+            </div>
+            <div class="col-sm-6 hovereffect hovereffect-video">
+                <video id="vid_03" class="video-js" controls preload="auto" width="495" height="278"
+                       poster="" data-setup="{}">
+                    <source src="../video/2016-01-25.m4v" type='video/m4v'>
+                    <p class="vjs-no-js">
+                        To view this video please enable JavaScript, and consider upgrading to a web browser that
+                        <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                    </p>
+                </video>
+                <div class="overlay">
+                    <p class="description" style="color: black">Tubing</p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- /.gallery -->
 
@@ -85,9 +135,9 @@
     </footer>
 </div>
 <!-- /.container -->
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
+<script src="http://vjs.zencdn.net/5.10.4/video.js"></script>
 <script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -97,6 +147,9 @@
 
   ga('create', 'UA-73641920-1', 'auto');
   ga('send', 'pageview');
+
+
+
 
 </script>
 </body>
