--- a/macro/index.html
+++ b/macro/index.html
@@ -28,7 +28,7 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,300,700' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<div class="container" ng-controller="galleryController">
+<div class="container">
     <div class="brand"><a href=".." style="text-decoration:none;">E R I C W O N G</a></div>
 
     <!-- Navigation -->
@@ -59,7 +59,7 @@
                         <a href="../life">LIFE</a>
                     </li>
                     <li>
-                        <a href="../contact">CONTACT</a>
+                        <a href="../contact">IG</a>
                     </li>
                 </ul>
             </div>
@@ -69,8 +69,9 @@
     </nav>
 
     <!-- Gallery -->
-    <justified-gallery gallery="macro"></justified-gallery>
+    <justified-gallery ng-controller="macroGalleryController"></justified-gallery>
     <!-- /.gallery -->
+
     <footer>
             <div class="col-lg-12 text-center">
                 <p class="copyright">Copyright &copy; eric wong 2016</p>
@@ -81,9 +82,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
-<script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script src="../js/bootstrap.min.js"></script>
-<script src="../gallery.js"></script>
+<script src="../js/gallery.js"></script>
+<script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script>
 </script>
 <script>
@@ -94,7 +95,6 @@
 
   ga('create', 'UA-73641920-1', 'auto');
   ga('send', 'pageview');
-
 </script>
 <script>
 
