Update: Added new video formats for current videos Issue: Fixed macro pages

--- a/life/index.html
+++ b/life/index.html
@@ -85,13 +85,13 @@
     <!--</a>-->
     <!--</div>-->
 
-    <div class="gallery" style="width: 960px; margin: 0 auto">
-        <div class="row">
+    <div class="container-fluid gallery" style="margin: 0 auto;">
 
-            <div class="col-sm-6 hovereffect hovereffect-video">
+            <div class="col-xs-12 col-sm-6 hovereffect hovereffect-video" style="overflow:hidden;">
                 <video id="vid_01" class="video-js" controls preload="auto" width="495" height="278"
                        poster="" data-setup="{}">
                     <source src="../video/QuarryRock.mp4" type='video/m4v'>
+                    <source src="../video/QuarryRock.webm" type='video/webm'>
                     <p class="vjs-no-js">
                         To view this video please enable JavaScript, and consider upgrading to a web browser that
                         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -102,10 +102,11 @@
                 </div>
             </div>
 
-            <div class="col-sm-6 hovereffect hovereffect-video">
+            <div class="col-xs-12 col-sm-6 hovereffect hovereffect-video">
                 <video id="vid_02" class="video-js" controls preload="auto" width="495" height="278"
                        poster="" data-setup="{}">
                     <source src="../video/Cork&Fin2.m4v" type='video/m4v'>
+                    <source src="../video/Cork&Fin2.webm" type='video/webm'>
                     <p class="vjs-no-js">
                         To view this video please enable JavaScript, and consider upgrading to a web browser that
                         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
@@ -115,20 +116,21 @@
                     <p class="description"> Dine out Vancouver at the Cork and Fin.</p>
                 </div>
             </div>
-            <div class="col-sm-6 hovereffect hovereffect-video">
+            <div class="col-xs-12 col-sm-6 hovereffect hovereffect-video">
                 <video id="vid_03" class="video-js" controls preload="auto" width="495" height="278"
                        poster="" data-setup="{}">
                     <source src="../video/2016-01-25.m4v" type='video/m4v'>
+                    <source src="../video/2016-01-25.webm" type='video/webm'>
                     <p class="vjs-no-js">
                         To view this video please enable JavaScript, and consider upgrading to a web browser that
                         <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                     </p>
                 </video>
                 <div class="overlay">
-                    <p class="description" style="color: black">Tubing</p>
+                    <p class="description">Tubing</p>
                 </div>
             </div>
-        </div>
+
     </div>
     <!-- /.gallery -->
 
