--- a/macro/index.html
+++ b/macro/index.html
@@ -93,8 +93,7 @@
         crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
 <script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
-<script src="../gallery.js"></script>
->>>>>>> de8c0ab30f250e4aa4436d4d5ec5da40c5446d10
+<script src="../js/gallery.js"></script>
 <script>
 </script>
 <script>
