Issue: Custom players were laggy. switched to embedded youtube links Update: added video tab

--- a/contact/index.html
+++ b/contact/index.html
@@ -57,6 +57,9 @@
                     <li>
                         <a href="../life">LIFE</a>
                     </li>
+                    <li>
+                        <a href="../video">VIDEO</a>
+                    </li>
                     <li class="active">
                         <a href=".">IG</a>
                     </li>
