--- a/macro/index.html
+++ b/macro/index.html
@@ -66,6 +66,9 @@
                         <a href="../life">LIFE</a>
                     </li>
                     <li>
+                        <a href="../video">VIDEO</a>
+                    </li>
+                    <li>
                         <a href="../contact">IG</a>
                     </li>
                 </ul>
