--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <a href="life">LIFE</a>
             </li>
             <li>
+                <a href="video">VIDEO</a>
+            </li>
+            <li>
                 <a href="contact">IG</a>
             </li>
         </ul>
@@ -101,7 +104,7 @@
             <!--<img class="frontpage" src="images/IMG0237.png">-->
             <a href="contact">
                 <div class="overlay">
-                    <h2>Contact</h2>
+                    <h2>Instagram</h2>
                 </div>
             </a>
             </div>
