--- a/land/index.html
+++ b/land/index.html
@@ -67,6 +67,9 @@
                         <a href="../life">LIFE</a>
                     </li>
                     <li>
+                        <a href="../video">VIDEO</a>
+                    </li>
+                    <li>
                         <a href="../contact">IG</a>
                     </li>
                 </ul>
