--- a/life/index.html
+++ b/life/index.html
@@ -25,13 +25,10 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/clappr/latest/clappr.min.js"></script>
-
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" href="../css/angular.css">
     <link rel="stylesheet" href="../css/business-casual.css">
     <link rel="stylesheet" href="../vendor/jquery.justifiedGallery/justifiedGallery.min.css">
-    <link rel="stylesheet" href="http://vjs.zencdn.net/5.10.4/video-js.css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800"
           rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Josefin+Sans:100,400,700' rel='stylesheet' type='text/css'>
@@ -68,7 +65,10 @@
                         <a href="../macro">MACRO</a>
                     </li>
                     <li class="active">
-                        <a href=".">VIDEO</a>
+                        <a href=".">LIFE</a>
+                    </li>
+                    <li>
+                        <a href="../video">VIDEO</a>
                     </li>
                     <li>
                         <a href="../contact">IG</a>
@@ -87,80 +87,42 @@
     <!--</a>-->
     <!--</div>-->
 
-    <div class="container-fluid gallery" style="padding: 0; margin: 0 auto;">
+    <div id="gallery">
+        <div class="hovereffect">
+            <img src="img/IMG3107.png">
 
-        <div class="col-xs-12 col-sm-6" style="padding: 0">
-            <div class="hovereffect hovereffect-video" style="overflow:hidden">
-                <!--<video id="vid_01" class="video-js" controls preload="auto" width="495" height="278"-->
-                <!--poster="" data-setup="{}">-->
-                <!--<source src="../video/QuarryRock.mp4" type='video/m4v'>-->
-                <!--<source src="../video/QuarryRock.webm" type='video/webm'>-->
-                <!--<p class="vjs-no-js">-->
-                <!--To view this video please enable JavaScript, and consider upgrading to a web browser that-->
-                <!--<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>-->
-                <!--</p>-->
-                <!--</video>-->
-                <div id="player_01" style="width:100%"></div>
-                <div class="overlay">
-                    <p class="description"> Exploring Quarry Rock.</p>
-                </div>
+            <div class="overlay">
+                <h2>Hong Kong</h2>
+                <a href="img/IMG3107.png"></a>
             </div>
         </div>
-
-        <div class="col-xs-12 col-sm-6" style="padding: 0">
-            <div class="hovereffect hovereffect-video" style="overflow:hidden">
-                <!--<video id="vid_02" class="video-js" controls preload="auto" width="495" height="278"-->
-                <!--poster="" data-setup="{}">-->
-                <!--<source src="../video/Cork&Fin2.m4v" type='video/m4v'>-->
-                <!--<source src="../video/Cork&Fin2.webm" type='video/webm'>-->
-                <!--<p class="vjs-no-js">-->
-                <!--To view this video please enable JavaScript, and consider upgrading to a web browser that-->
-                <!--<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>-->
-                <!--</p>-->
-                <!--</video>-->
-                <div id="player_02"></div>
-                <div class="overlay">
-                    <p class="description"> Dine out Vancouver at the Cork and Fin.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6" style="padding: 0">
-            <div class="hovereffect hovereffect-video" style="overflow:hidden">
-                <!--<video id="vid_03" class="video-js" controls preload="auto" width="495" height="278"-->
-                       <!--poster="" data-setup="{}">-->
-                    <!--<source src="../video/2016-01-25.m4v" type='video/m4v'>-->
-                    <!--<source src="../video/2016-01-25.webm" type='video/webm'>-->
-                    <!--<p class="vjs-no-js">-->
-                        <!--To view this video please enable JavaScript, and consider upgrading to a web browser that-->
-                        <!--<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>-->
-                    <!--</p>-->
-                <!--</video>-->
-                <div id="player_03"></div>
-                <div class="overlay">
-                    <p class="description">Tubing</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-xs-12 col-sm-6" style="padding: 0">
-            <div class="hovereffect hovereffect-video" style="overflow:hidden">
-                <!--<video id="vid_03" class="video-js" controls preload="auto" width="495" height="278"-->
-                <!--poster="" data-setup="{}">-->
-                <!--<source src="../video/2016-01-25.m4v" type='video/m4v'>-->
-                <!--<source src="../video/2016-01-25.webm" type='video/webm'>-->
-                <!--<p class="vjs-no-js">-->
-                <!--To view this video please enable JavaScript, and consider upgrading to a web browser that-->
-                <!--<a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>-->
-                <!--</p>-->
-                <!--</video>-->
-                <div id="player_04"></div>
-                <div class="overlay">
-                    <p class="description">Tubing</p>
-                </div>
-            </div>
-        </div>
-
+        <a href="img/IMG3031.png" rel="lightbox[gallery]">
+            <img src="img/IMG3031.png">
+        </a>
+        <a href="img/IMG2692.png" rel="lightbox[gallery]">
+            <img src="img/IMG2692.png">
+        </a>
+        <a href="img/IMG2016.png" rel="lightbox[gallery]">
+            <img src="img/IMG2016.png">
+        </a>
+        <a href="img/IMG1009.png" rel="lightbox[gallery]">
+            <img src="img/IMG1009.png">
+        </a>
+        <a href="img/IMG4362.png" rel="lightbox[gallery]">
+            <img src="img/IMG4362.png">
+        </a>
+        <a href="img/IMG6148.png" rel="lightbox[gallery]">
+            <img src="img/IMG6148.png">
+        </a>
+        <a href="img/IMG2027.png" rel="lightbox[gallery]">
+            <img src="img/IMG2027.png">
+        </a>
+        <a href="img/IMG0622.png" rel="lightbox[gallery]">
+            <img src="img/IMG0622.png">
+        </a>
+        <a href="img/IMG3262.png" rel="lightbox[gallery]">
+            <img src="img/IMG3262.png">
+        </a>
     </div>
     <!-- /.gallery -->
 
@@ -180,30 +142,6 @@
         crossorigin="anonymous"></script>
 <script src="../vendor/jquery.justifiedGallery/jquery.justifiedGallery.min.js"></script>
 <script>
-    var player_01 = new Clappr.Player({
-        source: "../video/QuarryRock.mp4",
-        parentId: "#player_01",
-        width: "450",
-        height: "253"
-    });
-    var player_02 = new Clappr.Player({
-        source: "../video/Cork&Fin2.mp4",
-        parentId: "#player_02",
-        width: "450",
-        height: "253"
-    });
-    var player_03 = new Clappr.Player({
-        source: "../video/2016-01-25.mp4",
-        parentId: "#player_03",
-        width: "450",
-        height: "253"
-    });
-    var player_04 = new Clappr.Player({
-        source: "../video/2016-01-25.mp4",
-        parentId: "#player_04",
-        width: "450",
-        height: "253"
-    });
 </script>
 <script>
     (function (i, s, o, g, r, a, m) {
@@ -220,8 +158,6 @@
 
     ga('create', 'UA-73641920-1', 'auto');
     ga('send', 'pageview');
-
-
 </script>
 </body>
 </html>
