Update: removed href from land images. Updated tab labels

--- a/contact/index.html
+++ b/contact/index.html
@@ -61,7 +61,7 @@
                         <a href="../video">VIDEO</a>
                     </li>
                     <li class="active">
-                        <a href=".">IG</a>
+                        <a href=".">INSTAGRAM</a>
                     </li>
                 </ul>
             </div>
