--- a/land/index.html
+++ b/land/index.html
@@ -70,7 +70,7 @@
                         <a href="../video">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">IG</a>
+                        <a href="../contact">INSTAGRAM</a>
                     </li>
                 </ul>
             </div>
@@ -88,31 +88,31 @@
                 <a href="img/IMG3107.png"></a>
             </div>
         </div>
-        <a href="img/IMG3031.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG3031.png">
         </a>
-        <a href="img/IMG2692.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG2692.png">
         </a>
-        <a href="img/IMG2016.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG2016.png">
         </a>
-        <a href="img/IMG1009.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG1009.png">
         </a>
-        <a href="img/IMG4362.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG4362.png">
         </a>
-        <a href="img/IMG6148.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG6148.png">
         </a>
-        <a href="img/IMG2027.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG2027.png">
         </a>
-        <a href="img/IMG0622.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG0622.png">
         </a>
-        <a href="img/IMG3262.png" rel="lightbox[gallery]">
+        <a rel="lightbox[gallery]">
             <img src="img/IMG3262.png">
         </a>
     </div>
@@ -153,7 +153,7 @@
         $("#gallery").justifiedGallery({
             rowHeight: 200,
             margins: 10,
-            randomize: false
+            randomize: true
         });
         console.log(window.location);
         if(window.location.pathname.indexOf('#IMG313') != -1) {
