--- a/life/index.html
+++ b/life/index.html
@@ -71,7 +71,7 @@
                         <a href="../video">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">IG</a>
+                        <a href="../contact">INSTAGRAM</a>
                     </li>
                 </ul>
             </div>
