--- a/video/index.html
+++ b/video/index.html
@@ -71,7 +71,7 @@
                         <a href=".">VIDEO</a>
                     </li>
                     <li>
-                        <a href="../contact">IG</a>
+                        <a href="../contact">INSTAGRAM</a>
                     </li>
                 </ul>
             </div>
